# modbusT

./: .gitignore  CMakeLists.txt  Config.json  config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h  modbusconnect.cpp  modbusconnect.h
build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  qt_modbus_example.sln  qt_modbus_example.vcxproj  qt_modbus_example.vcxproj.filters
build-release/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build-release/qt_modbus_example.dir/Release/: qt_modbus_example.exe.recipe
build-release/qt_modbus_example.dir/Release/qt_modbu.2CFBB86E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  qt_modbus_example.lastbuildstate
build-release/qt_modbus_example_autogen/: mocs_compilation_Release.cpp
build-release/qt_modbus_example_autogen/include_Release/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_modbusconnect.cpp  moc_modbusconnect.cpp.d
build-release/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-release/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-release/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
(+3 files in other folders)
